fixed some spelling errors and what not for landing pages

--- a/src/Cms/CoreBundle/Resources/views/Welcome/backendCms.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Welcome/backendCms.html.twig
@@ -37,7 +37,7 @@
                         <img src="/flat-ui/images/imac.png" alt="PipeStack CMS" width="300" height="248"/>
                     </div>
                     <p style="padding: 20px 24px;">
-                        PipeStack is powerful backend CMS service that takes your content management to the next level. Create a scalable and powerful backend for your content management needs in minutes. Your data is accessed through an easy to use RESTful API so you can deliver your content through impressive mobile and web solutions.
+                        PipeStack's service builds a scalable and powerful backend for your content management needs in minutes. Lower your costs by dropping traditional CMS hosting solutions and increase revenue by ensuring fast load times for all of your visitors. Take your content management to the next level today.
                     </p>
                     <a href="{{ path('cms_core.user_register') }}" id="primary-cta" class="btn btn-xlarge btn-danger" style="margin-top: 30px;">Try It Today For Free</a>
                 </div>
