--- a/src/Cms/CoreBundle/Resources/views/Welcome/cloudBaas.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Welcome/cloudBaas.html.twig
@@ -12,7 +12,7 @@
 {% block title %}Cloud BaaS {{  parent() }}{% endblock %}
 
 {% block metatags %}
-    <meta name="description" content="PipeStack is powerful cloud BaaS that creates a scalable backend for your content in minutes.">
+    <meta name="description" content="PipeStack is a powerful cloud BaaS that creates a scalable backend for your content in minutes.">
 {% endblock %}
 
 {% block body %}
@@ -37,7 +37,7 @@
                         <img src="/flat-ui/images/imac.png" alt="PipeStack CMS" width="300" height="248"/>
                     </div>
                     <p style="padding: 20px 24px;">
-                        PipeStack is powerful cloud BaaS that takes your content management to the next level. With PipeStack, you can add a scalable and powerful backend for your content in minutes. Lower your costs by dropping traditional CMS hosting solutions and increase revenue by ensuing fast load times for all of your visitors.
+                        PipeStack is a powerful cloud BaaS that takes your content management to the next level. With PipeStack, you can add a scalable and powerful backend for your content in minutes. Lower your costs by dropping traditional CMS hosting solutions and increase revenue by ensuring fast load times for all of your visitors.
                     </p>
                     <a href="{{ path('cms_core.user_register') }}" id="primary-cta" class="btn btn-xlarge btn-danger" style="margin-top: 30px;">Try It Today For Free</a>
                 </div>
@@ -49,39 +49,39 @@
             <div class="row">
                 <section class="span4">
                     <div class="tile" id='fast-tile'>
-                        <h2>Fast BaaS</h2>
+                        <h2>Lightening Fast</h2>
                         <i class="icon-bolt icon-4x"></i>
                         <p>Our backend service loads your data super fast. We accomplish this by using a streamlined codebase in combination with cutting edge server technology.</p>
                     </div>
                 </section>
                 <section class="span4">
                     <div class="tile" id="multilingual-tile">
-                        <h2>Cloud</h2>
+                        <h2>Cloud Management</h2>
                         <i class="icon-cloud icon-4x"></i>
-                        <p>Our backend service is hosted in the cloud so you'll never have to worry about managing servers, setting databases or daily backups. We take care of that for you.</p>
+                        <p>Our backend service is hosted in the cloud so you'll never have to worry about managing servers, setting up databases or daily backups. We take care of that for you.</p>
                     </div>
                 </section>
                 <section class="span4">
                     <div class="tile" id="cog-tile">
                         <h2>Scalable</h2>
                         <i class="icon-cog icon-4x"></i>
-                        <p>PipeStack's BaaS combines a fleshed out code base with MongoDB and AWS technology to make your content scale cost effectively.</p>
+                        <p>The secret to PipeStack's BaaS lies in it's incredibly scalable system. Your content will load fast and offer the best user experience while lowering your server costs.</p>
                     </div>
                 </section>
             </div>
             <div class="row">
                 <section class="span4">
                     <div class="tile" id="easy-to-use-tile">
-                        <h2>App Inteface</h2>
+                        <h2>App Interface</h2>
                         <i class="icon-thumbs-up icon-4x"></i>
-                        <p>Our service includes an easy to use interface for publishing content. The user expierence has been modled after tradional CMS systems, so the learning curve is short.</p>
+                        <p>Our service includes an easy to use interface for publishing content. The user expierence has been modeled after tradional CMS systems, so the learning curve is short.</p>
                     </div>
                 </section>
                 <section class="span4">
                     <div class="tile" id="mobile-tile">
                         <h2>Mobile Optimized</h2>
                         <i class="icon-tablet icon-4x"></i>
-                        <p>Building powerful content oriented mobile apps is a breeze. Let our API do the hard lifting on the backend while you focus on your apps core code base.</p>
+                        <p>Building powerful content oriented mobile apps is a breeze. Let our API do the heavy lifting on the backend while you focus on your apps core code base.</p>
                     </div>
                 </section>
                 <section class="span4">
