--- a/src/Cms/CoreBundle/Resources/views/Welcome/fasterLoadTime.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Welcome/fasterLoadTime.html.twig
@@ -32,12 +32,12 @@
                     <img src="/flat-ui/images/imac.png" alt="PipeStack CMS" width="570" height="472"/>
                 </div>
                 <div class="span6">
-                    <h1 id='primary-header' style="font-size: 51px; line-height: 50px;">Faster Load Times <br /> For Your CMS</h1>
+                    <h1 id='primary-header' style="font-size: 51px; line-height: 50px;">Faster Load Time<br />For Your CMS</h1>
                     <div class="visible-phone" id="mobile-imac-container">
                         <img src="/flat-ui/images/imac.png" alt="PipeStack CMS" width="300" height="248"/>
                     </div>
                     <p style="padding: 20px 24px;">
-                        PipeStack is a powerful and scalable service that helps your content management system achieve faster load time. With PipeStack, you can easily add a scalable and powerful backend to your current CMS. Lower your costs by dropping traditional CMS hosting solutions and increase revenue by ensuing faster load times for all of your visitors today.
+                        PipeStack is a powerful CMS service that focuses on achieving faster load time. With PipeStack, you can add a scalable and powerful backend for your content in minutes. Lower your costs by dropping traditional CMS hosting solutions and increase revenue by ensuring fast load times for all of your visitors.
                     </p>
                     <a href="{{ path('cms_core.user_register') }}" id="primary-cta" class="btn btn-xlarge btn-danger" style="margin-top: 30px;">Try It Today For Free</a>
                 </div>
@@ -51,7 +51,7 @@
                     <div class="tile" id='fast-tile'>
                         <h2>Lightening Fast</h2>
                         <i class="icon-bolt icon-4x"></i>
-                        <p>Our backend service provides significantly faster load times for your CMS. We accomplish this by using high tech, cutting edge database and server technology.</p>
+                        <p>Our backend service provides a significantly faster load time for your CMS. We accomplish this by combining cutting edge database and server technology.</p>
                     </div>
                 </section>
                 <section class="span4">
@@ -81,7 +81,7 @@
                     <div class="tile" id="mobile-tile">
                         <h2>Media Delivery</h2>
                         <i class="icon-camera-retro icon-4x"></i>
-                        <p>Not only does our service achieve faster load times for your data, but it also achieves faster load times for your media. Load your images, video and music quickly.</p>
+                        <p>Not only does our service achieve a faster load time for your data, but it also achieves a faster load time for your media. Load your images, video and music quickly.</p>
                     </div>
                 </section>
                 <section class="span4">
