--- a/src/Cms/CoreBundle/Resources/views/Welcome/index.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Welcome/index.html.twig
@@ -48,10 +48,33 @@
     <div class="container">
         <div class="row">
             <section class="span4">
+                <div class="tile" id="multilingual-tile">
+                    <h2>CMS Integration</h2>
+                    <i class="icon-globe icon-4x"></i>
+                    <p>Integrating your content management system can be done through the API. You can use your current CMS and PipeStack in parallel to bring your content to new levels.</p>
+                </div>
+            </section>
+            <section class="span4">
                 <div class="tile" id='fast-tile'>
                     <h2>Lightening Fast</h2>
                     <i class="icon-bolt icon-4x"></i>
                     <p>We focus on making your content load at lightening fast speeds. Our technology stack does the heavy lifting to deliver your data to you in no time.</p>
+                </div>
+            </section>
+            <section class="span4">
+                <div class="tile" id="cog-tile">
+                    <h2>Scalable</h2>
+                    <i class="icon-cog icon-4x"></i>
+                    <p>PipeStack's complete backend stack combines new cutting edge database and server technology to make your content scale cost effectively.</p>
+                </div>
+            </section>
+        </div>
+        <div class="row">
+            <section class="span4">
+                <div class="tile" id="easy-to-use-tile">
+                    <h2>Easy to Use</h2>
+                    <i class="icon-thumbs-up icon-4x"></i>
+                    <p>Whether you are creating new content with PipeStack or loading in content from your CMS, you'll find our interface initiative and wonderfully easy to use.</p>
                 </div>
             </section>
             <section class="span4">
@@ -66,29 +89,6 @@
                     <h2>RESTful API</h2>
                     <i class="icon-magic icon-4x"></i>
                     <p>We deliver your content's data through a RESTful web API. The interface is simple and intuitive. Checkout the <a href="{{ path('cms_core.developers') }}">docs</a>, you'll  be up and running in no time.</p>
-                </div>
-            </section>
-        </div>
-        <div class="row">
-            <section class="span4">
-                <div class="tile" id="easy-to-use-tile">
-                    <h2>Easy to Use</h2>
-                    <i class="icon-thumbs-up icon-4x"></i>
-                    <p>Whether you are creating new content with PipeStack or loading in content from your CMS, you'll find our interface initiative and wonderfully easy to use.</p>
-                </div>
-            </section>
-            <section class="span4">
-                <div class="tile" id="multilingual-tile">
-                    <h2>CMS Integration</h2>
-                    <i class="icon-globe icon-4x"></i>
-                    <p>Integrating your content management system can be done through the API. Use your current CMS and PipeStack in parallel to bring your content to new levels.</p>
-                </div>
-            </section>
-            <section class="span4">
-                <div class="tile" id="cog-tile">
-                    <h2>Scalable</h2>
-                    <i class="icon-cog icon-4x"></i>
-                    <p>PipeStack's complete backend stack combines new cutting edge database and server technology to make your content scale cost effectively.</p>
                 </div>
             </section>
         </div>
