remove br from wordpress joomla and drupal landing pages

--- a/src/Cms/CoreBundle/Resources/views/Welcome/drupal.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Welcome/drupal.html.twig
@@ -32,7 +32,7 @@
                     <img src="/flat-ui/images/imac.png" alt="PipeStack CMS" width="570" height="472"/>
                 </div>
                 <div class="span6">
-                    <h1 id='primary-header' style="font-size: 51px; line-height: 50px;">Drupal <br /> Optimized</h1>
+                    <h1 id='primary-header' style="font-size: 51px; line-height: 50px;">Drupal Optimized</h1>
                     <div class="visible-phone" id="mobile-imac-container">
                         <img src="/flat-ui/images/imac.png" alt="PipeStack CMS" width="300" height="248"/>
                     </div>
